--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-google-charts": "^3.0.15",
     "react-scripts": "4.0.0",
+    "sweetalert2": "^10.9.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
